# trapezoidal-integral-in-MPI

./: CMakeLists.txt  MatrixMatrix.c  README.md  get_input.c  homework.c  m  test.cpp
src/: homework.c  trap.c
